<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <FrameLayout
        android:background="#44755e"

        android:id="@+id/content_frame1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <!-- Add content here -->
        <LinearLayout

            android:baselineAligned="false"
            android:orientation="horizontal"
            android:id="@+id/MainBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_gravity="center_horizontal|top">

            <LinearLayout
                android:background="#44755e"
                android:baselineAligned="false"
                android:id="@+id/Left_sideMainBox"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:background="#44755e"
                    android:baselineAligned="false"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ViewFlipper
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="3"
                        android:id="@+id/viewflipper1"
                        android:autoStart="true">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/tiger1"
                            android:id="@+id/imageview4"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/tiger2"
                            android:id="@+id/imageview5"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/tiger3"
                            android:id="@+id/imageview6"/>
                    </ViewFlipper>


                    <TextView

                        android:layout_weight="1.75"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="12sp"
                        android:padding="15dp"
                        android:textColor="#ffff"
                        android:background="@drawable/textview_gradient"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="0dp"

                        android:layout_marginLeft="5dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/description_of_the_animal"
                        android:id="@+id/textView"/>

                    <LinearLayout

                        android:background="#44755e"
                        android:layout_marginLeft="3dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginTop="5dp"
                        android:baselineAligned="false"
                        android:layout_weight="3.5"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal">

                        <FrameLayout

                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent">

                            <ImageButton
                                android:src="@drawable/dolphin3"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                style="@style/animalspagebtnstyle4"
                                android:background="#ff2b5740"
                                android:text="@string/check_on_map"
                                android:paddingBottom="25dp"
                                android:layout_marginBottom="5dp"
                                android:id="@+id/imageButton2"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:text="SEE ZOO ANIMAL"
                                android:textSize="12sp"
                                android:paddingTop="35dp"
                                android:layout_gravity="center_horizontal"
                                android:textColor="#ffffff"
                                android:layout_height="wrap_content" />


                        </FrameLayout>


                        <FrameLayout

                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent">

                            <ImageButton
                                android:src="@drawable/ic_map"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="#ff2b5740"
                                android:paddingBottom="25dp"
                                android:layout_marginBottom="5dp"
                                style="@style/animalspagebtnstyle4"
                                android:text="@string/check_on_map"
                                android:id="@+id/imageButton3"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:text="CHECK ON MAP"
                                android:textSize="12sp"

                                android:layout_gravity="center_horizontal"
                                android:textColor="#ffffff"
                                android:paddingTop="35dp"
                                android:layout_height="wrap_content" />


                        </FrameLayout>


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:id="@+id/Right_sideMainBox"
                android:layout_marginRight="0dp"
                android:layout_weight="2"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">






                <LinearLayout

                    android:layout_marginRight="5dp"
                    android:background="#44755e"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">



                    <TextView
                        android:layout_weight="1"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#44755e"
                        android:textColor="#ffff"
                        android:gravity="right"
                        android:layout_marginBottom="1dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/scientific_name"
                        android:id="@+id/textView15"
                        />



                    <TextView
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:layout_marginBottom="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#44755e"
                        android:textColor="#ffff"

                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/lifespan"
                        android:id="@+id/textView55"
                        android:paddingLeft="5dp" />
                    <TextView
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:layout_marginBottom="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#44755e"
                        android:textColor="#ffff"

                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Area"
                        android:id="@+id/textView20"
                        android:paddingLeft="5dp" />
                    <TextView
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:layout_marginBottom="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#44755e"
                        android:textColor="#ffff"

                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Family"
                        android:id="@+id/textView5"
                        android:paddingLeft="5dp" />
                    <TextView
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#44755e"
                        android:textColor="#ffff"

                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/gestation_period"
                        android:id="@+id/textView27"
                        android:paddingLeft="5dp" />

                    <TextView
                        android:paddingRight="10dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:layout_marginBottom="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#44755e"
                        android:textColor="#ffff"

                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/mass"
                        android:id="@+id/textView7"
                        android:paddingLeft="5dp" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:layout_marginBottom="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#44755e"
                        android:textColor="#ffff"

                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/height"
                        android:id="@+id/textView8"
                        android:paddingLeft="5dp" />

                    <TextView
                        android:layout_weight="1"
                        android:paddingRight="10dp"
                        android:gravity="right"
                        android:layout_marginBottom="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#44755e"
                        android:textColor="#ffff"

                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/diet"
                        android:id="@+id/textView9"
                        android:paddingLeft="5dp" />

                    <TextView
                        android:layout_weight="1"
                        android:paddingRight="10dp"
                        android:gravity="right"
                        android:layout_marginBottom="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#44755e"
                        android:textColor="#ffff"

                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/habitat"
                        android:id="@+id/textView10"
                        android:paddingLeft="5dp" />
                    <TextView
                        android:layout_weight="1"
                        android:paddingRight="10dp"
                        android:layout_marginBottom="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#44755e"
                        android:textColor="#ffff"
                        android:gravity="right"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/status"
                        android:id="@+id/textView11"
                        android:paddingLeft="5dp" />







                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="#e5e5e5"
        android:dividerHeight="1dp"
        android:background="#d6d6d6"/>
</android.support.v4.widget.DrawerLayout>